# ma1_simulator

./: CMakeLists.txt  README.md  gui.py  package.xml
ma1_mclsimpy/: CMakeLists.txt  package.xml
ma1_mclsimpy/config/: sim_params.yaml
ma1_mclsimpy/launch/: ma1_mclsimpy.launch.py
ma1_mclsimpy/scripts/: sim_with_waves.py
ma1_stonefish/: CMakeLists.txt  README.md  package.xml
ma1_stonefish/launch/: simulation.launch.py  simulation_nogpu.launch.py  simulation_nopgu.launch.py
ma1_stonefish/scenarios/: colav.scn  demo.scn  ma1.scn  river.scn
metadata/: looks.scn
scenarios/: ma1.scn
