<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ma1_stonefish</name>
  <version>0.0.0</version>
  <description>Contains the simulation of milliAmpere 1 in Stonefish</description>
  <maintainer email="andeshog@stud.ntnu.no">Anders</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
